fixed collapsible/expandable description w hidden/visible button.

--- a/src/styles/rental.css
+++ b/src/styles/rental.css
@@ -365,12 +365,14 @@ Button {
   justify-content: flex-start;
   overflow-y: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 10;
+  -webkit-line-clamp: 6;
   -webkit-box-orient: vertical;
+  white-space: pre-line;
 }
 
 .expanded-description {
   justify-content: flex-start;
   overflow-y: hidden;
   height: fit-content;
+  white-space: pre-line;
 }
